syntax = "proto3";

package cache;

option go_package = ".";

message UserDetails {
    string user_id = 1;
    string user_name = 2;
    string user_email = 3;
    string user_phone = 4;
    string user_status = 5; // e.g., "active", "inactive"
    string device_id = 6; // e.g., "device123"
}